--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./index.js && react-scripts start"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,9 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.13"
+    "mongoose": "^5.11.13",
+    "react": "^17.0.1",
+    "react-scripts": "^4.0.2",
+    "reactdom": "^2.0.0"
   }
 }
