--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "prefix":".",
-    "token":"ODA0NjU4MjQ0MzQwNTQ3NjI3.YBPiYw.TQS1rM4r8VzPbR4dmiFgI7ozha8",
+    "token":".",
     "connect":""
 }
